修改单元测试的Perm Gen大小